[package]
name = "mousepage"
version = "0.1.0"
authors = ["Ben Burdette <bburdette@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inputbot = "0.4.0"
touchpage = "0.2.0"
serde_json = "0.7.0"
failure = "0.1.1"
