[package]
name = "mousepage"
description = "control your computer mouse with your phone, via a web page"
repository = "https://github.com/bburdette/mousepage"
version = "0.2.1"
authors = ["Ben Burdette <bburdette@gmail.com>"]
edition = "2018"
license = "BSD-3-Clause"

[badges]
maintenance = { status = "experimental" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inputbot = "0.4.0"
# inputbot = { path = "../../op-code/InputBot/"}
touchpage = "0.2.2"
# touchpage = { path = "../../code/touchpage/"}
serde_json = "1.0"
failure = "0.1.1"
serde = { version = "1.0.41", features = ["derive"] }
